Fixing an issue with safari not showing an svg file.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -114,7 +114,6 @@ ul {
   height: 100%;
   margin-top: 15px;
   margin-left: 15px;
-  overflow: hidden;
   position: fixed;
   float: left;
   z-index: 999;
@@ -148,8 +147,8 @@ ul {
 
 .logo {
   cursor: crosshair;
-  width: 65px;
-  height: 65px;
+  width: 55px;
+  height: 55px;
   z-index: 999;
   margin: 0 auto;
   left: 50%;
@@ -298,19 +297,19 @@ ul {
 
 .myface {
   width: 100%;
-  margin-top: 75px;
+  margin-top: 15px;
   margin-bottom: 50px;
   }
 
 .work_experience {
-  margin-top: 70px;
+  margin-top: 50px;
   margin-bottom: 20px;
   }
 
 .download_icon img {
   height: 35px;
   margin-top: 15px;
-  margin-left: 5px;
+  margin-left: 10px;
   -webkit-filter: drop-shadow(0px 1px 1px rgba(0,0,0,0.25));
   transform: translateX(-50%);
   transform-origin: center;
@@ -366,6 +365,10 @@ ul {
   background-color: white;
   box-sizing: border-box;
   border: 10px solid white;
+  }
+
+  .legal p {
+    font-size: 12px;
   }
 
 /* ABOUT SECTION MEDIA QUIRIES*/
